src/style.scss
:root {
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body {
    margin: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: rgb(230, 230, 230);
}

#debug-render-target { 
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
    opacity: 0;
}

canvas { 
    display: block;
    box-sizing: border-box;
}

.title-card {
    z-index: 1;
    pointer-events: none;

    width: 500px;
    height: 400px;
    border-radius: 120px;
    background-color: white;
    border: 10px solid, #2dbecf;
    box-sizing: border-box;

    padding-top: 50px;
    padding-left: 50px;
    padding-right: 50px;

    position: absolute;
    top: -200px;
    left: -250px;

    h1 {
        margin: 0;
        padding-left: 15px;
        font-family: 'Courier New', Courier, monospace;
        font-size: 70px;
    }

    hr {
        margin-top: 20px;
        margin-bottom: 25px;
    }

    .links {
        padding-left: 15px;

        a {
            display: inline-block;
            width: 60px;
            height: 60px;
            text-decoration: none;
            pointer-events: auto;
            margin-right: 25px;

            .github {
                width: 50px;
                padding: 5px;
                border-radius: 7px;
                background-color: #1a1f24;
            }

            .linkedin {
                width: 60px;
            }
        }
    }
}

.project-card {
    z-index: 1;
    pointer-events: none;

    width: 400px;
    height: 260px;

    border-radius: 100px;
    background-color: white;
    border: 10px solid, #60d43a;
    box-sizing: border-box;

    padding-top: 40px;
    padding-left: 40px;
    padding-right: 40px;

    position: absolute;
    top: -130px;
    left: -200px;

    &.tall {
        height: 310px;
        top: -155px
    }

    h2 {
        margin: 0;
        padding-left: 15px;
        font-family: 'Courier New', Courier, monospace;
        font-size: 40px;
    }

    h3 {
        margin: 0;
        padding-left: 15px;
        font-family: 'Courier New', Courier, monospace;
        font-size: 20px;
        word-break: auto-phrase;
    }

    hr {
        margin-top: 20px;
        margin-bottom: 25px;
    }
}

